269